--- a/Source/Enter.UI/Styles/components/_ent_button.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_button.component.scss
@@ -16,7 +16,7 @@ todo:
   --ent-btn-fg-active: var(--ent-fg-base-emphasis);
   --ent-btn-stroke: var(--ent-border-color); 
   --ent-btn-stroke-width: var(--ent-border-1);
-  --ent-btn-border-radius: var(--ent-radius-md);
+  --ent-btn-border-radius: var(--ent-border-radius-2);
 }
 
 .ent-btn {
