--- a/Source/Enter.UI/Styles/components/_ent_card.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_card.component.scss
@@ -7,7 +7,7 @@
     --ent-card-border-width: var(--ent-border-width);
     --ent-card-border-style: var(--ent-border-style);
     --ent-card-border-color: var(--ent-border-color);
-    --ent-card-border-radius: var(--ent-radius-sm);
+    --ent-card-border-radius: var(--ent-border-radius-2);
     --ent-card-box-shadow: var(--ent-shadow-lg);
 }
 
