--- a/Source/Enter.UI/Styles/variables/_border.variables.scss
+++ b/Source/Enter.UI/Styles/variables/_border.variables.scss
@@ -6,6 +6,14 @@
   --ent-border-3: 3px;
   --ent-border-4: 4px;
 
+  --ent-border-radius-0: 0px;
+  --ent-border-radius-1: 2px;
+  --ent-border-radius-2: 4px;
+  --ent-border-radius-3: 6px;
+  --ent-border-radius-4: 8px;
+  --ent-border-radius-round: 16px;
+  --ent-border-radius-full: 100%;
+
   --ent-border-color: #eaeaea
 
 }
