--- a/Source/Enter.UI/Styles/variables/_variables.scss
+++ b/Source/Enter.UI/Styles/variables/_variables.scss
@@ -1,4 +1,5 @@
 @import "breakpoint.variables";
+@import "colors.variables";
 @import "border.variables";
 @import "typography.variables";
 @import "space.variables";
