--- a/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
@@ -11,8 +11,8 @@
                               KeepPanelAlive="true"
                               PanelClass="h-full"
                               ActiveClass=""
-                              Closeable="false"
-                                IconMinify
+                              Closeable
+                                
                               class="border-0 "
                               Direction="EntTabDirection.Vertical">
         <EntCard class="mt-4">
