--- a/Source/Enter.UI/Styles/base/_normalize.scss
+++ b/Source/Enter.UI/Styles/base/_normalize.scss
@@ -9,7 +9,7 @@
  */
 
 html {
-    line-height: var(--ent-line-height); /* 1 */
+    line-height: var(--ent-typo-line-height-md); /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
 }
 
@@ -164,7 +164,7 @@ select,
 textarea {
     font-family: inherit; /* 1 */
     font-size: 100%; /* 1 */
-    line-height: var(--ent-line-height); /* 1 */
+    line-height: var(--ent-typo-line-height-md); /* 1 */
     margin: 0; /* 2 */
 }
 
