--- a/Source/Enter.UI/Styles/components/_ent_toolbar.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_toolbar.component.scss
@@ -1,13 +1,13 @@
 :root {
-  --ent-toolbar-space-y: var(--ent-size-xs);
-  --ent-toolbar-space-x: var(--ent-size-md);
-  --ent-toolbar-space-b: var(--ent-size-xs);
+  --ent-toolbar-space-y: var(--ent-space-2);
+  --ent-toolbar-space-x: var(--ent-space-3);
+  --ent-toolbar-space-b: var(--ent-space-2);
   --ent-toolbar-z-index: var(--ent-z-index-tertiary);
   --ent-toolbar-bg: var(--ent-bg-base);
   --ent-toolbar-border-width: 1px;
   --ent-toolbar-border-style: solid;
-  --ent-toolbar-border-color: var(--ent-stroke-base);
-  --ent-toolbar-border-radius: var(--ent-border-radius);
+  --ent-toolbar-border-color: var(--ent-border-1);
+  --ent-toolbar-border-radius: var(--ent-border-radius-2);
   --ent-toolbar-box-shadow: var(--ent-shadow-sm);
 }
 
@@ -15,6 +15,7 @@
   padding: 8px 12px 7px 12px;
   border-bottom: var(--ent-toolbar-border-width) var(--ent-toolbar-border-style) var(--ent-toolbar-border-color);
   background-color: var(--ent-toolbar-bg);
+  border-radius: var( --ent-toolbar-border-radius);
   box-shadow: var(--ent-toolbar-box-shadow);
   z-index: var(--ent-toolbar-z-index);
   display: flex;
