- resize app bar and fix ent tab resposinsive on horizontal mode

--- a/Source/Enter.UI/Components/Tabs/EntTab.razor
+++ b/Source/Enter.UI/Components/Tabs/EntTab.razor
@@ -5,7 +5,7 @@
 <CascadingValue Value="@(this)">
     <div @attributes="@AdditionalAttributes" class="@RootCss">
 
-        @if (ResponsiveMode)
+        @if (ResponsiveMode && Direction == EntTabDirection.Vertical)
         {
             <div class="responsive:ent-tab-item-container">
 
