--- a/Source/Enter.UI/Styles/components/_ent_app_bar.component.scss
+++ b/Source/Enter.UI/Styles/components/_ent_app_bar.component.scss
@@ -1,6 +1,6 @@
 :root {
-  --ent-appbar-space-y: 1rem;
-  --ent-appbar-space-x: 2rem;
+  --ent-appbar-space-y: var(--ent-space-4);
+  --ent-appbar-space-x: var(--ent-space-4);
   --ent-appbar-z-index: var(--ent-z-index-tertiary);
   --ent-appbar-bg: var(--ent-bg-base);
   --ent-appbar-border-width: var(--ent-border-width);
