fix modal and tab

--- a/Source/Enter.UI/Components/Modal/EntModal.razor
+++ b/Source/Enter.UI/Components/Modal/EntModal.razor
@@ -73,7 +73,10 @@
 
     private async Task OnContainerClick(MouseEventArgs args)
     {
-        Cancel();
+        if (Options.ShowCloseButton)
+        {
+            Cancel();
+        }
     }
 
     private async Task OnModalClick(MouseEventArgs arg)
