--- a/example/Enter.Dashboard/Pages/Documents/DataTablePage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/DataTablePage.razor
@@ -1,15 +1,10 @@
 ﻿@page "/documents/datatable"
-@using Enter.UI.Components.TreeView
-@using Enter.UI.Components.Button
-@using Enter.UI.Core.Extensions
-@using System.Net.Mime
 @using Enter.Dashboard.Model
-@using Enter.UI.Core
 @inherits Enter.UI.Cores.Bases.EntPageBase
 @layout DocumentLayout
 <EntCard class="m-4" Title="جدول داده">
     <CardBody>
-        <EntTable DataSources="DataSource" Total="Constants.Users.Count" Take="_take" >
+        <EntTable DataSources="DataSource" Total="Constants.Users.Count" Take="_take">
             <HeaderTemplate>
                 <th>شناسه</th>
                 <th>نام</th>
@@ -25,21 +20,21 @@
                 </tr>
             </RowTemplate>
         </EntTable>
-            <EntPagination class="mt-4" 
-                           Selected="_page" 
-                           SelectedChanged="OnPaginationChange" 
-                           Count="_totalPage"/>
+        <EntPagination class="mt-4"
+                       Selected="_page"
+                       SelectedChanged="OnPaginationChange"
+                       Count="_totalPage"/>
     </CardBody>
 </EntCard>
 
 @code {
 
-    
-    public List<Users> DataSource { get; set; } = new List<Users>();
-    
-    private  int _take = 2;
-    private  int _page = 1;
-    private  int _totalPage => (int) Math.Ceiling(decimal.Parse(Constants.Users.Count.ToString()) / _take);
+
+    public List<Users> DataSource { get; set; } = new();
+
+    private readonly int _take = 2;
+    private int _page = 1;
+    private int _totalPage => (int)Math.Ceiling(decimal.Parse(Constants.Users.Count.ToString()) / _take);
 
     protected override void OnInitialized()
     {
@@ -54,13 +49,12 @@
         var skip = (page - 1) * _take;
 
         DataSource = Constants.Users.Skip(skip).Take(_take).ToList();
-        
+
         StateHasChanged();
     }
 
     public override void Dispose()
     {
-        
     }
 
 }
