--- a/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/MdiTabPage.razor
@@ -1,36 +1,32 @@
 ﻿@page "/documents/mdi-tabs"
-@using Enter.UI.Components.Button
-@using Enter.UI.Components.Flex
-@using Enter.UI.Components.Icon
-@using Enter.Dashboard.Model
 @using Enter.UI.Services
 @inherits Enter.UI.Cores.Bases.EntPageBase
 @layout DocumentLayout
-<EntMdiTab Tag="MdiTabPage" Responsive ItemDirection="EntTabItemDirection.Vertical"
-                              KeepPanelAlive="true"
-                              PanelClass="h-full"
-                              ActiveClass=""
-                              Closeable
-                                
-                              class="border-0 "
-                              Direction="EntTabDirection.Horizontal">
-        <EntCard class="mt-4">
-            <CardBody>
-                        <EntButton @onclick="NewTab">Open New Tab</EntButton>
-                    </CardBody>
-        </EntCard>
+<EntMdiTab Tag="MdiTabPage" Responsive ItemDirection="EntTabItemDirection.Horizontal"
+           KeepPanelAlive="true"
+           PanelClass="h-full"
+           ActiveClass=""
+           Closeable
 
-    </EntMdiTab>
+           class="border-0 "
+           Direction="EntTabDirection.Vertical">
+    <EntCard class="mt-4">
+        <CardBody>
+            <EntButton @onclick="NewTab">Open New Tab</EntButton>
+        </CardBody>
+    </EntCard>
+
+</EntMdiTab>
 
 
 @code {
 
     [Inject]
     public IEntMdiService MdiService { get; set; } = default!;
-    
+
     public async Task NewTab()
     {
-        for (int i = 0; i < 5; i++)
+        for (var i = 0; i < 5; i++)
         {
             await MdiService.AddNewTabAsync<FormLayout>(Guid.NewGuid().ToString(), $"Upload Box {i}", "ri-upload-line");
         }
