--- a/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
+++ b/example/Enter.Dashboard/Pages/Documents/TreeViewPage.razor
@@ -1,11 +1,9 @@
 ﻿@page "/documents/treeview"
+@using Enter.UI.Core.Extensions
+@using Enter.UI.Core
+@using Enter.UI.Components.Icon
 @using Enter.UI.Components.TreeView
 @using Enter.UI.Components.Button
-@using Enter.UI.Core.Extensions
-@using System.Net.Mime
-@using Enter.Dashboard.Model
-@using Enter.UI.Components.Icon
-@using Enter.UI.Core
 @layout DocumentLayout
 <div class="p-4">
 
@@ -19,14 +17,12 @@
                 DataSource="@Datasource"
                 @bind-SelectedValue="TreeSelectedValue"/>
 
-           @if (TreeSelectedValue != null)
-           {
-               <EntButton Size="ButtonSize.Small" class="" @onclick="@(()=>{
-                   TreeSelectedValue = "Normal Backend Developer";
-               })">
-                   @TreeSelectedValue
-               </EntButton>
-           }
+            @if (TreeSelectedValue != null)
+            {
+                <EntButton Size="ButtonSize.Small" class="" @onclick="@(() => { TreeSelectedValue = "Normal Backend Developer"; })">
+                    @TreeSelectedValue
+                </EntButton>
+            }
 
         </CardBody>
     </EntCard>
@@ -53,8 +49,8 @@
 
 @code {
 
-    public IEnumerable<EntSelectItem<string>> Datasource =  Constants.Roles.ProjectToSelectItem(x => x.Text, x => x.Value, x => x.Childrens, EntIconName.Folder);
-    
+    public IEnumerable<EntSelectItem<string>> Datasource = Constants.Roles.ProjectToSelectItem(x => x.Text, x => x.Value, x => x.Childrens, EntIconName.Folder);
+
     public List<string> TreeSelectedValues { get; set; } = new() { "Admin", "Normal Backend Developer" };
     public string TreeSelectedValue { get; set; } = "Normal Front Developer";
 }
